# ParisAIHackathon

./: .env  .env.example  .gitignore  ENV_SETUP.md  FRONTEND_TESTING.md  QUICKSTART_JS.md  README.md  README_JS.md  agent.py  index.html  package.json  pyproject.toml  requirements.txt  test-frontend.html  vite.config.js
app/: __init__.py  main.py
app/agent/: __init__.py  audio_pipeline.py  session.py  video_pipeline.py  vision_agent.py  worker.py
app/api/: token.py
app/core/: config.py  security.py
app/mcp/: __init__.py  google_maps_server.py  router.py  schemas.py  whatsapp_server.py
app/services/: elevenlabs.py  gemini.py  voxstral.py  whatsapp_tools.py
docker/: Dockerfile  Dockerfile.google-maps-mcp
docs/: README.md  building-accessibility-app.md  cloud-run-deployment.md  elevenlabs.md  google-maps-integration.md  google-realtime-models.md  livekit-agents-vision.md  livekit-javascript-client.md  mcp-server-comparison.md  mcp-servers-with-livekit-agents.md  mistral-voxtral-stt.md  realtime-models-overview.md  worker-entrypoint-best-practices.md
scripts/: deploy-google-maps-mcp.ps1  deploy-google-maps-mcp.sh  generate_token.py  run_google_maps_mcp.py  run_whatsapp_mcp.py
src/: index.js
